k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traveling-backend-service
spec:
  selector:
    app: traveling-backend-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
