k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traveling-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - traveling-api.narudog.com
      secretName: traveling-backend-tls
  rules:
    - host: traveling-api.narudog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traveling-backend-service
                port:
                  number: 80
